Add CLI for generating and persisting embeddings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,7 @@ dependencies = [
     "anthropic",
     "jinja2",
     "python-multipart",
-    "ruff",
-    "mypy",
+    "sentence-transformers"
 ]
 
 [project.optional-dependencies]
@@ -30,6 +29,8 @@ dev = [
     "isort",
     "pytest",
     "httpx",
+    "ruff",
+    "mypy",
 ]
 
 [tool.black]
