Improve sentence splitting; add spacy dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "python-multipart",
     "sentence-transformers",
     "chromadb",
+    "spacy",
 ]
 
 [project.optional-dependencies]
